--- a/module/langs/translation-en.json
+++ b/module/langs/translation-en.json
@@ -1,11 +1,12 @@
 {
 	"name" : "English",
 	"kew-mql" : {
+		"mql-menu": "Add columns using MQL…",
 		"mql-column": "Use MQL to extend from data in",
 		"pick-service": "Pick a service on the left",
 		"service-title": "Services",
 		"add-mql-srv": "Add MQL (Metaweb Query Language) Service",
 		"enter-name": "Enter the service's name",
-		"querying": "Querying MQL Service..."
+		"querying": "Querying MQL Service…"
 	}
 }
